1.23_03

  * Dropped the pure-Perl implementation of both Scalar::- and List::Util.

1.23_02 -- Tue Mar 30 11:09:15 CDT 2010

  * Fix first() and reduce() to check the callback first; &first(1) is now illigal. [gfx]
  * Fix reduce() to allow XSUB callbacks [gfx]
  * Fix first() to allow XSUB callbacks [gfx]
  * Resolve RT #55763: tainted() doesn't do SvGETMAGIC(sv) [gfx]
  * define CvISXSUB so older perl versions will still compile

1.23_01 -- Mon Mar 22 08:24:11 CDT 2010

  * Add failing tests; SVt_RV is not directly SvROK [gfx]
  * Implement openhandle() in XS (with extra tests) [gfx]
  * Modernize *.pm [gfx]
  * Modernize ListUtil.xs [gfx]
  * Add ppport.h [gfx]
  * Fix an overloading issue on sum(), and add tests for overloading [gfx]
  * Small tweaks for minstr()/maxstr() [gfx]
  * Optimize dualvar() [gfx]
  * Use sv_copypv() instead of SvPV() and sv_setpv() [gfx]
  * avoid non-portable warnings

1.23 -- Wed Mar 10 20:50:00 CST 2010

  * Add a test file to ensure 'GETMAGIC' called once [gfx]
  * "GETMAGIC" should be called only once [gfx]
  * Use PERL_NO_GET_CONTEXT for efficiency (see perlguts) [gfx]
  * Don't care about dVAR. ExtUtils::ParseXS deals with it. [gfx]
  * t/p_max.t, t/p_min.t fail on perl5.8.1.  [tokuhirom]
  * avoid non-portable warnings
  * Fix PP::reftype in edge cases [gfx]

1.22 -- Sat Nov 14 09:26:15 CST 2009

  * silence a compiler warning about an unreferenced local variable [Steve Hay]
  * RT#51484 Preserve utf8 flag of string passed to dualvar()
  * RT#51454 Check first argument to first/reduce is a code reference
  * RT#50528 [PATCH] p_tainted.t fix for VMS [Craig A. Berry]
  * RT#48550 fix pure perl looks_like_number not to match non-ascii digits

1.21 -- Mon May 18 10:32:14 CDT 2009

  * Change build system for perl-only install not to need to modify blib
  * When building inside perl, tests for weaken should be always run (Alexandr Ciornii)

1.20 -- Wed May 13 16:42:53 CDT 2009

*** NOTE***